1999-01-03  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (client): Give file1 a predictable mode so that the
	output in client-9 will not depend on the umask of the user
	running the tests.

1998-12-29  Jim Kingdon  <http://www.cyclic.com>

	* client.c (client_senddate): Use date_to_internet rather than
	using our own "5/26/1997 13:01:40 GMT" date format.
	* main.c (date_to_internet): Check for errors from sscanf.  Always
	send a four digit year.  Send hours, minutes, and seconds as two
	digits per RFC822.
	* sanity.sh (client): New tests client-8 and client-9 test for this.

	* sanity.sh (rcs2): New tests rcs2-6 through rcs2-8 test for fix
	to lib/getdate.y (before the fix, "100 months" or "8 years" would
	tend to mean the year 1969, thus the tests would give "cvs update:
	file1 is no longer in the repository").

1998-12-28  Larry Jones  <larry.jones@sdrc.com>

	* entries.c (Register): Return if unable to open log file to avoid
	referencing the invalid file pointer.
	* sanity.sh (dirs2-7): With above change, no longer fails.
	* sanity.sh (rcs3-5a): Another assertion failure message.
	* sanity.sh (pserver-4, pserver-5): Some 4.4BSD derived systems spit
	out bogus error messages when initgroups is called as non-root.

1998-12-23  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (rcs3, dotest_fail): The assertion failure message varies
	wildly between different systems and the resulting abort call can
	even result in spurrious output.  Fix the regexp to accept nearly
	anything containing some kind of assertion failure and ensure that
	any spurrious output ends up in the output file instead of on the
	terminal.

1998-12-23  Jim Kingdon  <http://www.cyclic.com>

	* admin.c, checkout.c, commit.c, cvsrc.c, expand_path.c,
	history.c, ignore.c, import.c, log.c, mkmodules.c, modules.c,
	myndbm.c, parseinfo.c, rcs.c, remove.c, rtag.c, status.c, subr.c,
	tag.c, wrapper.c: Cast all char's to unsigned char before passing